welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:3: error: type mismatch;
 found   : Unit
 required: Boolean
  return col()
            ^Program:10: error: not found: value vuBiscuit
      vuBiscuit= true
      ^Program:16: error: not found: value vuBiscuit
  return vuBiscuit
         ^Program:16: warning: enclosing method col has result type Unit: return value discarded
  return vuBiscuit
  ^